fix(dashboard):  fix week forecast widget text overflow
Fix week forecast widget text overflow by setting height attribute to auto.

--- a/src/app/dashboard/bottom-section/bottom-section.component.scss
+++ b/src/app/dashboard/bottom-section/bottom-section.component.scss
@@ -30,11 +30,11 @@
   .widget {
     display: grid;
     gap: 1em;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 2fr 1fr;
 
     position: relative;
     width: 146px;
-    height: 110px;
+    height: auto;
     padding: 1em;
     background: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
